--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -25,46 +25,17 @@
         <h1 id="page-title" data-i18n="app.title">MiniApp Base</h1>
         <div class="toolbar" role="group" aria-label="Global actions">
           <div class="user-menu" role="group" aria-label="User menu">
-            <button id="btnUser" class="ghost" aria-haspopup="true" aria-expanded="false">
+            <button
+              id="btnUser"
+              class="ghost"
+              type="button"
+              aria-haspopup="dialog"
+              aria-expanded="false"
+              aria-controls="user-menu"
+            >
               <span class="user-avatar" aria-hidden="true">☰</span>
               <span id="current-user" class="sr-only">--</span>
             </button>
-            <ul id="user-menu" class="menu" hidden>
-              <li>
-                <button id="btnLang" class="menu-item" type="button">
-                  <span class="menu-icon" aria-hidden="true" data-lang-icon>🇧🇷</span>
-                  <span class="menu-text" data-i18n="settings.language">Idioma</span>
-                  <span class="sr-only" data-i18n="actions.toggleLanguage">Alternar idioma</span>
-                </button>
-              </li>
-              <li>
-                <button id="btnTheme" class="menu-item" type="button" aria-pressed="false">
-                  <span class="menu-icon" aria-hidden="true" data-theme-icon>☀️</span>
-                  <span class="menu-text" data-i18n="settings.theme">Tema</span>
-                  <span class="sr-only" data-i18n="actions.toggleTheme">Alternar tema</span>
-                </button>
-              </li>
-              <li>
-                <button id="btnUserPanel" class="menu-item" type="button">
-                  <span class="menu-icon" aria-hidden="true">👤</span>
-                  <span class="menu-text" data-i18n="settings.userPanel">Painel do usuário</span>
-                  <span class="sr-only" data-i18n="actions.openUserPanel">Abrir painel do usuário</span>
-                </button>
-              </li>
-              <li class="menu-divider" role="separator" aria-hidden="true"></li>
-              <li>
-                <button class="menu-item" type="button" data-action="profile">
-                  <span class="menu-icon" aria-hidden="true">🔐</span>
-                  <span class="menu-text" data-i18n="actions.profile">Perfil</span>
-                </button>
-              </li>
-              <li>
-                <button class="menu-item" type="button" data-action="logout">
-                  <span class="menu-icon" aria-hidden="true">🚪</span>
-                  <span class="menu-text" data-i18n="actions.logout">Sair</span>
-                </button>
-              </li>
-            </ul>
           </div>
         </div>
       </header>
@@ -134,6 +105,62 @@
           </small>
         </div>
       </footer>
+    </div>
+    <div
+      id="user-menu"
+      class="menu-overlay"
+      role="dialog"
+      aria-modal="true"
+      aria-labelledby="user-menu-title"
+      hidden
+    >
+      <div class="menu-overlay__panel" role="document" data-user-menu-panel>
+        <header class="menu-overlay__header">
+          <h2 id="user-menu-title" class="menu-overlay__title" data-i18n="settings.userMenuTitle">
+            Menu do usuário
+          </h2>
+          <button type="button" class="ghost icon-only menu-overlay__close" data-user-menu-close>
+            <span class="sr-only" data-i18n="actions.close">Fechar</span>
+            <span aria-hidden="true">✕</span>
+          </button>
+        </header>
+        <ul class="menu">
+          <li>
+            <button id="btnLang" class="menu-item" type="button">
+              <span class="menu-icon" aria-hidden="true" data-lang-icon>🇧🇷</span>
+              <span class="menu-text" data-i18n="settings.language">Idioma</span>
+              <span class="sr-only" data-i18n="actions.toggleLanguage">Alternar idioma</span>
+            </button>
+          </li>
+          <li>
+            <button id="btnTheme" class="menu-item" type="button" aria-pressed="false">
+              <span class="menu-icon" aria-hidden="true" data-theme-icon>☀️</span>
+              <span class="menu-text" data-i18n="settings.theme">Tema</span>
+              <span class="sr-only" data-i18n="actions.toggleTheme">Alternar tema</span>
+            </button>
+          </li>
+          <li>
+            <button id="btnUserPanel" class="menu-item" type="button">
+              <span class="menu-icon" aria-hidden="true">👤</span>
+              <span class="menu-text" data-i18n="settings.userPanel">Painel do usuário</span>
+              <span class="sr-only" data-i18n="actions.openUserPanel">Abrir painel do usuário</span>
+            </button>
+          </li>
+          <li class="menu-divider" role="separator" aria-hidden="true"></li>
+          <li>
+            <button class="menu-item" type="button" data-action="profile">
+              <span class="menu-icon" aria-hidden="true">🔐</span>
+              <span class="menu-text" data-i18n="actions.profile">Perfil</span>
+            </button>
+          </li>
+          <li>
+            <button class="menu-item" type="button" data-action="logout">
+              <span class="menu-icon" aria-hidden="true">🚪</span>
+              <span class="menu-text" data-i18n="actions.logout">Sair</span>
+            </button>
+          </li>
+        </ul>
+      </div>
     </div>
     <div
       id="language-dialog"
