Add destructive reset option to user menu

--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -164,6 +164,12 @@
             </button>
           </li>
           <li>
+            <button class="menu-item" type="button" data-action="reset-data">
+              <span class="menu-icon" aria-hidden="true">🗑️</span>
+              <span class="menu-text" data-i18n="actions.resetData">Excluir todos os dados</span>
+            </button>
+          </li>
+          <li>
             <button class="menu-item" type="button" data-action="logout">
               <span class="menu-icon" aria-hidden="true">🚪</span>
               <span class="menu-text" data-i18n="actions.logout">Sair</span>
