--- a/miniapps/base_shell/auth/register.html
+++ b/miniapps/base_shell/auth/register.html
@@ -194,6 +194,7 @@
         </ul>
       </div>
     </div>
+    <script type="module" src="../../../shared/js/main.js"></script>
     <script type="module" src="../app.js"></script>
   </body>
 </html>
