Add reusable password toggle for auth forms

--- a/miniapps/base_shell/auth/login.html
+++ b/miniapps/base_shell/auth/login.html
@@ -35,7 +35,7 @@
             </div>
             <div class="field auth-login__field-password">
               <label for="login-password" data-i18n="auth.form.password">Senha</label>
-              <div class="auth-login__password-wrapper">
+              <div class="auth-password-wrapper">
                 <input
                   id="login-password"
                   name="password"
@@ -45,14 +45,14 @@
                 />
                 <button
                   type="button"
-                  class="auth-login__toggle-password"
+                  class="auth-toggle-password"
                   data-action="toggle-password"
                   aria-controls="login-password"
                   aria-pressed="false"
                   aria-labelledby="login-password-toggle-label"
                 >
                   <span
-                    class="auth-login__toggle-password-icon"
+                    class="auth-toggle-password-icon"
                     aria-hidden="true"
                     data-password-visibility-icon
                   >👁️</span>
