feat: implement shell layout and routing

--- a/appbase/shell/index.html
+++ b/appbase/shell/index.html
@@ -12,7 +12,8 @@
       <div class="left"><strong>MiniApp Base</strong></div>
       <div class="right"><a class="btn ghost" href="/">Marketplace</a></div>
     </header>
-    <main id="app" class="app-container"></main>
+    <main id="app" class="app-shell" role="main"></main>
+    <footer id="status">Conectado ao hub principal.</footer>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
