--- a/appbase/shell/index.html
+++ b/appbase/shell/index.html
@@ -8,9 +8,29 @@
     <link rel="stylesheet" href="/packages/ui/components.css" />
   </head>
   <body>
-    <header class="toolbar">
+    <header class="toolbar" data-role="shell-header">
       <div class="left"><strong>MiniApp Base</strong></div>
-      <div class="right"><a class="btn ghost" href="/">Marketplace</a></div>
+      <nav class="right" aria-label="Atalhos do shell">
+        <a class="btn ghost" href="/">Marketplace</a>
+        <a
+          class="btn ghost"
+          href="/miniapps/admin#create"
+          data-admin-only
+          hidden
+        >Criar MiniApp</a>
+        <a
+          class="btn ghost"
+          href="/miniapps/admin#catalog"
+          data-admin-only
+          hidden
+        >Editar/Ordenar Market</a>
+        <a
+          class="btn primary"
+          href="/miniapps/admin"
+          data-admin-only
+          hidden
+        >Admin</a>
+      </nav>
     </header>
     <main id="app" class="app-shell" role="main"></main>
     <footer id="status">Conectado ao hub principal.</footer>
